--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"stylelint:fix": "stylelint src --fix"
 	},
 	"dependencies": {
-
+		"v-tooltip": "^4.0.0-alpha.1"
 	},
 	"engines": {
 		"node": ">=14.0.0",
@@ -41,14 +41,11 @@
 	"devDependencies": {
 		"@babel/core": "^7.15.0",
 		"@babel/preset-env": "^7.15.0",
-		"@vue/compiler-sfc": "^3.2.20",
-		"babel-loader": "^8.2.2",
-		"svgo-loader": "^3.0.0",
-		"vue-svg-loader": "^0.17.0-beta.2",
-		"webpack-cli": "^4.9.0",
 		"@nextcloud/dialogs": "^3.1.2",
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/router": "^2.0.0",
+		"@vue/compiler-sfc": "^3.2.20",
+		"babel-loader": "^8.2.2",
 		"bootstrap": "^5.1.0",
 		"css-loader": "^6.4.0",
 		"html-webpack-plugin": "^5.3.2",
@@ -58,11 +55,14 @@
 		"sass-loader": "^10.2.0",
 		"style-loader": "^3.3.0",
 		"svg-url-loader": "^7.1.1",
-		"tippy.js": "^6.3.1",
+		"svgo-loader": "^3.0.0",
+		"tippy.js": "^6.3.2",
 		"toastify-js": "^1.11.1",
 		"url-loader": "^4.1.1",
 		"validator": "^13.6.0",
 		"vue": "^3.2.20",
-		"vue-loader": "^16.0.0-beta.10"
+		"vue-loader": "^16.0.0-beta.10",
+		"vue-svg-loader": "^0.17.0-beta.2",
+		"webpack-cli": "^4.9.0"
 	}
 }
