--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"stylelint:fix": "stylelint src --fix"
 	},
 	"dependencies": {
+		"toastr": "^2.1.4",
 		"v-tooltip": "^4.0.0-alpha.1"
 	},
 	"engines": {
@@ -63,6 +64,7 @@
 		"vue": "^3.2.20",
 		"vue-loader": "^16.0.0-beta.10",
 		"vue-svg-loader": "^0.17.0-beta.2",
+		"webpack": "^5.69.0",
 		"webpack-cli": "^4.9.0"
 	}
 }
