--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"stylelint:fix": "stylelint src --fix"
 	},
 	"dependencies": {
+		"chalk": "^5.0.0",
 		"toastr": "^2.1.4",
 		"v-tooltip": "^4.0.0-alpha.1"
 	},
@@ -59,6 +60,8 @@
 		"svgo-loader": "^3.0.0",
 		"tippy.js": "^6.3.2",
 		"toastify-js": "^1.11.1",
+		"ts-loader": "^9.2.6",
+		"typescript": "^4.5.5",
 		"url-loader": "^4.1.1",
 		"validator": "^13.6.0",
 		"vue": "^3.2.20",
