--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	"private": true,
 	"scripts": {
 		"build": "NODE_ENV=production webpack --progress --config webpack.app.js",
-		"app": "NODE_ENV=development webpack --progress --config webpack.app.js",
+		"test": "NODE_ENV=development webpack --progress --config webpack.app.js",
 		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.app.js",
 		"lint": "eslint --ext .js,.vue src",
 		"lint:fix": "eslint --ext .js,.vue src --fix",
