--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"vue-loader": "^16.0.0-beta.10",
 		"vue-svg-loader": "^0.17.0-beta.2",
 		"webpack": "^5.69.0",
-		"webpack-cli": "^4.9.0"
+		"webpack-cli": "^4.9.0",
+		"mini-css-extract-plugin": "^2.6.0"
 	}
 }
