--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 	"dependencies": {
 		"chalk": "^5.0.0",
 		"toastr": "^2.1.4",
-		"v-tooltip": "^4.0.0-alpha.1"
+		"v-tooltip": "^4.0.0-alpha.1",
+		"vuex": "^4.0.2"
 	},
 	"engines": {
 		"node": ">=14.0.0",
@@ -52,6 +53,7 @@
 		"css-loader": "^6.4.0",
 		"html-webpack-plugin": "^5.3.2",
 		"jquery": "^3.6.0",
+		"mini-css-extract-plugin": "^2.6.0",
 		"popper.js": "^1.16.1",
 		"sass": "^1.38.0",
 		"sass-loader": "^10.2.0",
@@ -68,7 +70,6 @@
 		"vue-loader": "^16.0.0-beta.10",
 		"vue-svg-loader": "^0.17.0-beta.2",
 		"webpack": "^5.69.0",
-		"webpack-cli": "^4.9.0",
-		"mini-css-extract-plugin": "^2.6.0"
+		"webpack-cli": "^4.9.0"
 	}
 }
