--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "lib": [
+      "es2016","DOM"
+    ]
   },
   "include": [
     "src/**/*"
