--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.15.0",
 		"@babel/preset-env": "^7.15.0",
+		"@nextcloud/browserslist-config": "^2.2.0",
 		"@nextcloud/dialogs": "^3.1.2",
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/router": "^2.0.0",
